# bellhopcuda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  arrivals_fail.txt  arrivals_pass.txt  arrivals_tests.txt  changes_to_make.txt  clang-format.hook  compare_arrivals.py  compare_arrivals_direct.py  compare_floats.py  compare_ray.py  compare_ray_2.py  compare_ray_direct.py  compare_shdfil.py  compare_shdfil.sh  compare_shdfil_direct.py  eigen_3d_tests.txt  eigen_tests.txt  find_failing_ray.py  find_tests.sh  find_tl_tests.sh  gen_tests.py  parse_timing_results.py  ray_3d.txt  ray_3d_fail.txt  ray_3d_pass.txt  ray_Nx2D.txt  ray_tests_fail.txt  ray_tests_pass.txt  run_all_gen.sh  run_tests.sh  run_tests_wsl.sh  temp.txt  temp_pass.txt  tests_pass.txt  tl3d.txt  (+16 more)
config/: CMakeLists.txt  GenTemplates.cmake  SetupCommon.cmake
config/cuda/: CMakeLists.txt  SetupCUDA.cmake
config/cxx/: CMakeLists.txt
config/cxxlib/: CMakeLists.txt
config/examples/: CMakeLists.txt
config/winlib/: CMakeLists.txt
doc/: accuracy.md  compilation.md  faq.md  performance.md
examples/: background.cpp  defaults.cpp  province.cpp  readout.cpp  writeenv.cpp
include/bhc/: bhc.hpp  cpx.hpp  cxxorcuda.hpp  math.hpp  platform.hpp  real.hpp  structs.hpp
src/: UtilsCUDA.cuh  angles.hpp  api.cpp  arrivals.cpp  arrivals.hpp  atomics.hpp  attenuation.cpp  attenuation.hpp  beampattern.hpp  beams.hpp  bino.hpp  boundary.hpp  cmdline.cpp  common.hpp  common_run.hpp  common_setup.hpp  curves.hpp  eigenrays.cpp  eigenrays.hpp  errors.cpp  errors.hpp  influence.hpp  jobs.hpp  ldio.hpp  logging.cpp  logging.cu  logging.hpp  main.hpp  output.cpp  output.hpp  prtfileemu.hpp  raymode.cpp  raymode.hpp  readenv.cpp  readenv.hpp  refcoef.hpp  reflect.hpp  run.cpp  run.hpp  run_cuda.cu  (+27 more)
src/mode/: arr.cpp  arr.hpp  eigen.cpp  eigen.hpp  field.cpp  field.hpp  fieldimpl.cpp.in  fieldimpl.cu.in  fieldimpl.hpp  modemodule.hpp  outputsmodule.hpp  ray.cpp  ray.hpp  tl.cpp  tl.hpp
src/module/: api.cpp  atten.cpp  atten.hpp  beaminfo.hpp  botopt.hpp  boundary.hpp  boundarycond.hpp  freq0.hpp  freqvec.hpp  misc.hpp  nmedia.hpp  paramsmodule.hpp  pat.hpp  rayangles.hpp  rcvrbearings.hpp  rcvrranges.hpp  reflcoef.hpp  reflectioncoefficient.hpp  runtype.hpp  sbp.hpp  ssp.hpp  sxsy.hpp  szrz.hpp  title.hpp  topopt.hpp
src/util/: UtilsCUDA.cuh  atomics.hpp  binio.hpp  bino.hpp  directio.hpp  errors.cpp  errors.hpp  ldio.hpp  prtfileemu.hpp  timing.cpp  timing.hpp  unformattedio.hpp
test/in/: Dickins.env  DickinsB.bty  DickinsB.env  DickinsB_oneBeam.env  DickinsB_test.env  DickinsBray.env  DickinsCervenyB.env  DickinsFixedSlashes.env  DickinsFlatB.env  DickinsFlatBray.env  DoubleSeamount3D.env  DoubleSeamount3DHat.env  DoubleSeamount3D_ray.bty  DoubleSeamount3D_ray.env  DoubleSeamount3D_ray_onebeam.env  EllipseTLGB.ati  EllipseTLGB.env  EllipseTLGeom.env  EllipseTLGeom_onebeam.bty  EllipseTLGeom_onebeam.env  GulfB_rd_gb.env  GulfB_ri_Cerveny.env  GulfB_ri_Cerveny_onebeam.env  GulfB_ri_gb.env  Gulf_ray_rd.env  Gulf_ray_rd.ssp  Gulf_ray_ri.bty  Gulf_ray_ri.env  HyperBot2D.env  HyperBot3DHatCart.env  HyperBot3DHatCart_onebeam.env  HyperBot3DPolar.env  HyperBot_ray.bty  HyperBot_ray.env  HyperbotParaBot3DGaussian.env  KR3dCart.bty  KR3dCart.env  KR3dGaussian.env  KR3d_ray.env  KermitRooseveltLSCart.bty  (+207 more)
test/individual/: readme.txt
test/individual/analysis_3d/: analysis_3d.env  example_analysis_3d.arr.txt
test/individual/eigen_arrival/: arrival.env  eigen.env  eigen_arrival.env
